--- a/app/views/users/_source.html.erb
+++ b/app/views/users/_source.html.erb
@@ -1,3 +1,3 @@
-<pre class="<%= "sh_#{source.language}" %>">
-<%= source.blob =%>
+<pre <%= "class=\"sh_#{source[:language]}\"" if source[:language] %>">
+<%= source[:content] =%>
 </pre>
