--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
+    <%= javascript_tag "hljs.initHighlightingOnLoad();" %>
     <%= csrf_meta_tags %>
+    <script>hljs.initHighlightingOnLoad();</script>
     <%= yield(:head) %>
   </head>
   <body onload="sh_highlightDocument();">
