--- a/app/views/shared/_source.html.erb
+++ b/app/views/shared/_source.html.erb
@@ -1,3 +1,3 @@
-<pre><code <%= "class=#{source[:language]}" if source %> >
+<pre class="source" ><code <%= "class=#{source[:language]}" if source %> >
 <%= source[:content] =%>
 </code></pre>
