--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,7 @@
-<%= link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
+  <li>
+    <%= link_to image_tag('blacktocat-32.png', :alt => 'blacktocat', width: 24 ), root_path %>
+  </li>
   <% if current_user %>
     <li>
     <%= link_to('Logout', logout_path, :method=>'delete') %>
